<resources>
    <string name="app_name">MovieMenace</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="action_settings">Instellingen</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_films">Films</string>
    <string name="menu_account">Account</string>
    <string name="menu_lists">Mijn lijsten</string>
    <string name="menu_tickets">Mijn tickets</string>
    <string name="menu_login">Login</string>
    <string name="login_register">Nog geen account? registreer <u>hier</u> </string>
    <string name="name">Naam</string>
    <string name="list_name_hint">naam voor de lijst</string>
    <string name="desc">Beschrijving</string>
    <string name="list_desc_hint">Beschrijving voor de lijst</string>
    <string name="conf">Bevestigen</string>
    <string name="email">Email</string>
    <string name="iban">Iban</string>
    <string name="address">Adres</string>
    <string name="post">Postcode</string>
    <string name="poster">Film poster</string>
    <string name="duration">Duur</string>
    <string name="agerating">Leeftijd</string>
    <string name="buy_ticket">Koop een ticket</string>
    <string name="add_to_list">Voeg toe aan een lijst</string>
    <string name="time_placeholder">## minuten</string>
    <string name="agerating_placeholder">Kinderen / Volwassenen</string>
    <string name="desc_placeholder">Beschrijving van de film</string>
    <string name="listname">Lijstnaam</string>
    <string name="film_desc_placeholder">Beschrijving van de film</string>
    <string name="list_desc_placeholder">Beschrijving van de lijst</string>
    <string name="birth">Geboortedatum</string>
    <string name="pass">Wachtwoord</string>
    <string name="pass_re">Herhaal wachtwoord</string>
    <string name="banner">Bannerafbeelding van de film</string>
    <string name="movie_title">Filmtitel</string>
    <string name="location_placeholder">Bioscoop - Zaal #</string>
    <string name="rowseat_placeholder">Rij # - Stoel #</string>
    <string name="datetime_placeholder">Datum - Tijd</string>
    <string name="barcode">Barcode van dit ticket</string>
    <string name="use">Inleveren</string>
    <string name="edit">Bijwerken</string>
    <string name="popular_movies">Populaire films</string>
    <string name="logo">Logoafbeelding</string>
    <string name="login">Login</string>
    <string name="list">Lijst icoon</string>
    <string name="ticket">Ticket icoon</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="choose_seats">Stoelen kiezen</string>
    <string name="amount_seats">Aantal stoelen</string>
    <string name="action_search">Zoeken</string>
    <string name="pay">Betalen</string>
    <string name="create_list_empty_alert_title">Missende informatie</string>
    <string name="create_list_empty_alert_desc">Alstublieft</string>
    <string name="login_failed_title">Login Mislukt</string>
    <string name="login_failed_message">Login informatie is verkeerd of er is geen internet verbinding.</string>
    <string name="back">Terug</string>
    <string name="login_msg">Klik hier om in te loggen</string>
    <string name="room_number">Zaal</string>
    <string name="room_num">Zaal:</string>
    <string name="row_num">Rij:</string>
    <string name="seat_num">Stoel:</string>
    <string name="fill_all_fields">Vul alle velden in</string>
    <string name="double_seats_selected">Fout: dubbele zitplaatsen geselecteerd</string>
    <string name="missing_age_input">Fout: leeftijd is niet overal ingevuld</string>
    <string name="wrong_age">Fout: leeftijd moet tussen de 1 en 125 zijn</string>
    <string name="age">Leeftijd</string>
    <string name="seat_number">Stoelnummer</string>
    <string name="settings">Instellingen</string>
    <string name="language">Taal</string>
    <string name="mode">Kleur modus</string>
    <string name="dark_mode">Donkere modus</string>
    <string name="light_mode">Lichte modus</string>
    <string name="dutch">Nederlands</string>
    <string name="english">Engels</string>
    <string name="title_activity_settings">Instellingen</string>
    <string name="delete_from_list">Verwijder uit lijst</string>
    <string name="delete_list">Verwijder lijst</string>
    <string name="logout">Log uit</string>
    <string name="register_name_placeholder">Naam</string>
    <string name="register_iban_placeholder">NL99 BANK 0123456789</string>
    <string name="register_address_placeholder">straatnaam, nummer</string>
    <string name="email_example_placeholder">voorbeeld@email.nl</string>
    <string name="zip_code_example_placeholder">1234</string>
    <string name="zip_code_example_placeholder_2">AB</string>
    <string name="password_placeholder">Minimaal 8 karakters</string>
    <string name="register_email_error">Ongeldig e-mailadres</string>
    <string name="register_zip_code_error">Ongeldige postcode</string>
    <string name="register_birthday_error">Ongeldige geboortedatum</string>
    <string name="register_password_error">Wachtwoord moet minimaal 8 karakters bevatten</string>
    <string name="register_repeat_password_error">Wachtwoorden komen niet overeen</string>
    <string name="register_empty_error">Veld mag niet leeg zijn</string>
    <string name="error_no_viewings">Geen aankomende kijkmomenten</string>
    <string name="error_no_viewings_desc">In de aankomende week zijn er geen momenten om deze film te bekijken. Kom later terug voor het programma van toekomstige weken.</string>
    <string name="warning">Waarschuwing!</string>
    <string name="error_language_change_without_connection">Als er geen internetverbinding is zal alleen de UI  van taal veranderen. Wanneer er weer een verbinding is vastgesteld zullen de overige onderdelen vertalen.</string>
    <string name="adult">Volwassen</string>
    <string name="children">Kinderen</string>
    <string name="loading_text">Als je veel tickets hebt kan dit even duren…</string>
    <string name="row_number">Rij:&#032;</string>
    <string name="price">Prijs</string>
    <string name="minutes">Minuten</string>
    <string name="sign_up">Registreer</string>
    <string name="no_tickets_msg">Je hebt op het moment geen tickets</string>
    <string name="use_ticket">Ticket inleveren</string>
    <string name="use_ticket_conf_msg">Weet u zeker dat u dit ticket wil gebruiken?</string>
    <string name="cancel">Annuleren</string>
    <string name="purchase_ticket_error">Geen beschikbare plaatsen meer</string>
    <string name="no_lists_msg">Je hebt op het moment geen lijsten, maak ze hieronder aan</string>
    <string name="error_email">Er is een fout opgetreden bij het maken van het account. Het email adress bestaat al.</string>
    <string name="no_films_msg">Deze lijst heeft geen nog films</string>
    <string name="warning_language_update">De taal wordt geupdatet als je op terug drukt.</string>
    <string name="no_film_to_list_msg">Er zijn geen lijsten waar deze film niet al deel van is</string>
    <string name="normal_price">Normale prijs: </string>
    <string name="discount">2,50 euro korting: 11 jaar of jonger \n2,00 euro korting: 65 jaar of ouder</string>
</resources>