<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="nl.avans.moviemenace.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_films"
        android:name="nl.avans.moviemenace.ui.films.FilmsFragment"
        android:label="@string/menu_films"
        tools:layout="@layout/fragment_films" />

    <fragment
        android:id="@+id/nav_account"
        android:name="nl.avans.moviemenace.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_lists"
        android:name="nl.avans.moviemenace.ui.lists.ListsFragment"
        android:label="@string/menu_lists"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_tickets"
        android:name="nl.avans.moviemenace.ui.tickets.TicketsFragment"
        android:label="@string/menu_tickets"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_login"
        android:name="nl.avans.moviemenace.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

</navigation>