<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.TicketDetailActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:background="#999999"
        app:srcCompat="@drawable/ic_image_placeholder"
        app:tint="@color/white"
        android:contentDescription="@string/banner" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp">

        <TextView
            android:id="@+id/tv_ticket_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ticket_detail_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ticket_detail_title" />

        <TextView
            android:id="@+id/ticket_detail_rowseat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rowseat_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ticket_detail_location" />

        <TextView
            android:id="@+id/tv_ticket_detail_datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/datetime_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ticket_detail_rowseat" />

        <ImageView
            android:id="@+id/iv_ticket_detail_barcode"
            android:layout_width="0dp"
            android:layout_height="128dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ticket_detail_datetime"
            app:srcCompat="@drawable/ic_image_placeholder"
            android:contentDescription="@string/barcode" />

        <Button
            android:id="@+id/bn_ticket_detail_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/use"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_ticket_detail_barcode"
            android:backgroundTint="@color/black"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>