<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateListActivity"
    android:paddingTop="32dp"
    android:paddingHorizontal="24dp">

    <TextView
        android:id="@+id/tv_create_list_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_create_list_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/tv_create_list_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_create_list_name"
        android:autofillHints="@string/list_name_hint" />

    <TextView
        android:id="@+id/tv_create_list_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_list_name" />

    <EditText
        android:id="@+id/et_create_list_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:maxLines="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_create_list_desc"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_list_desc"
        android:autofillHints="@string/list_desc_hint" />

    <Button
        android:id="@+id/bn_create_list_conf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/conf"
        app:layout_constraintStart_toStartOf="@+id/et_create_list_desc"
        app:layout_constraintTop_toBottomOf="@+id/et_create_list_desc"
        android:backgroundTint="@color/black" />
</androidx.constraintlayout.widget.ConstraintLayout>