<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp">

        <ImageView
            android:id="@+id/iv_list_viewholder_ic"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleX=".5"
            android:scaleY=".5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_menu_tickets"
            app:tint="@color/black"
            android:contentDescription="@string/ticket" />

        <TextView
            android:id="@+id/tv_ticket_viewholder_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/movie_title"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_list_viewholder_ic"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ticket_viewholder_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/location_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_ticket_viewholder_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_ticket_viewholder_title" />

        <TextView
            android:id="@+id/tv_ticket_viewholder_rowseat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rowseat_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_ticket_viewholder_location"
            app:layout_constraintTop_toBottomOf="@+id/tv_ticket_viewholder_location" />

        <TextView
            android:id="@+id/tv_ticket_viewholder_datetime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/datetime_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_ticket_viewholder_rowseat"
            app:layout_constraintTop_toBottomOf="@+id/tv_ticket_viewholder_rowseat" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginHorizontal="40dp"
        app:srcCompat="@drawable/div_dashed"
        tools:ignore="ContentDescription" />

</LinearLayout>